--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -18,8 +18,13 @@
 					@Html.Raw(block.RenderedText)
 				}
 			}
-
-			@{ var slide = Model.Slide as ExerciseSlide; }
+			
+		    @{ var slide = Model.Slide as ExerciseSlide; }
+			@if (slide != null)
+			{
+				<textarea class='code code-sample'>@slide.WithoutAttribut</textarea>
+				<textarea class='code code-sample'>@slide.Head</textarea>
+			}
 			@if (slide != null)
 			{
 				<p>Допишите решение в окне ниже:</p>
@@ -29,6 +34,7 @@
 				<pre><code>@slide.ExpectedOutput</code></pre>
 				@Html.Partial("_ExerciseHints", slide.HintsHtml)
 			}
+			
 		</div>
 	</div>
 	<div class="row">
