make samples readonly

--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -56,22 +56,23 @@
 			cm.showHint({ hint: CodeMirror.hint.csharp });
 		}
 
-		function codeMirrorClass(c, theme) {
+		function codeMirrorClass(c, editable) {
 			var codes = document.getElementsByClassName(c);
 			for (var i = 0; i < codes.length; i++)
 				CodeMirror.fromTextArea(codes[i],
-				{
-					mode: "text/x-csharp",
-					lineNumbers: true,
-					theme: theme,
-					indentWithTabs: true,
-					tabSize: 4,
-					indentUnit: 4,
-					extraKeys: { "Ctrl-Space": "autocomplete" },
-				});
+		        {
+		        	mode: "text/x-csharp",
+		        	lineNumbers: true,
+		        	theme: editable ? "cobalt" : "default",
+		        	indentWithTabs: true,
+		        	tabSize: 4,
+		        	indentUnit: 4,
+		        	extraKeys: { "Ctrl-Space": "autocomplete" },
+		        	readOnly: editable ? false : "nocursor",
+		        });
 		}
 
-		codeMirrorClass("code-exercise", "cobalt");
-		codeMirrorClass("code-sample", "default");
+		codeMirrorClass("code-exercise", true);
+		codeMirrorClass("code-sample", false);
 	</script>
 }
