--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -87,6 +87,11 @@ a.nav-arrow:hover {
     margin: 20px 0 20px 0;
     width: 100%;
 }
+.sphere-engine-tm {
+    margin: -20px 0 0 0;
+    text-align: right;
+    font-size:small;
+}
 
 .after-run-block {
     display: none;
