--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -51,6 +51,7 @@
 	</div>
 
 	@Html.Partial("_SlideNavigation", Model)
+	@Html.Partial("_Sidebar", Model)
 </div>
 @section scripts{
 	<script src="~/Scripts/navigate.js"></script>
