--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -22,7 +22,7 @@
 			@{ var slide = Model.Slide as ExerciseSlide; }
 			@if (slide != null)
 			{
-				<textarea class='code code-exercise'>@slide.ExerciseInitialCode</textarea>
+				<textarea class='code code-exercise'>@slide.ExerciseInitialCode.EnsureEnoughLines(10)</textarea>
 				<div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine ™</a></div>
 
 				@*
