--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -52,7 +52,7 @@
   
 
             
-            @Html.Partial("_SlideNavigation", Model);
+            @Html.Partial("_SlideNavigation", Model)
         </div>
     </div>
 </div>
