--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -122,13 +122,18 @@ a.nav-arrow:hover {
   -moz-border-radius:               0px;
 }
 
-.Unit li {
+.unit ul {
+    padding-left:20px;
+}
+
+.unit li {
     list-style-type: none;
 }
 
-.Unit li.selected {
+.unit li.selected {
+    
     background-color: aliceblue;   
-    list-style-type: none;
+    list-style-type: disc;
 }
 
 .side-bar {
@@ -136,7 +141,7 @@ a.nav-arrow:hover {
     height: 500px; 
     float: left; 
     margin:30px 0 0 0;
-    padding-left: 50px;
+    padding-left: 30px;
 }
 
 li.unit-name {
