--- a/src/uLearn.Web/Views/Course/_Sidebar.cshtml
+++ b/src/uLearn.Web/Views/Course/_Sidebar.cshtml
@@ -1,5 +1,5 @@
 ﻿@model uLearn.CoursePageModel
-<ul class="side-bar unit">
+<ul class="side-bar units-list">
 	@{
 		int index = 0;
 		int groupNumber = 0;
@@ -13,11 +13,11 @@
 				previousName = currentUnit;
 				groupNumber++;
 			}
-			<li class="unit-name">
-				<a data-toggle="collapse" href=@("#N"+groupNumber) class="unit">
+			<li class="units-list-item">
+				<a data-toggle="collapse" href=@("#N"+groupNumber) class="units-list-item-text">
 					@currentUnit
 				</a>
-				<ul id=@("N"+groupNumber) class="@collapseOption">
+				<ul id=@("N"+groupNumber) class="slides-list @collapseOption">
 					@for (; index < Model.Course.Slides.Length; index++)
 					{
 						var slide = Model.Course.Slides[index];
@@ -26,7 +26,7 @@
 							break;
 						}
 						var selectedSlide = index == Model.SlideIndex;
-						<li class="@(selectedSlide ? "selected" : "")">@Html.ActionLink(slide.Title, "Slide", "Course", new { courseId = Model.Course.Id, slideIndex = index }, null)</li>
+						<li class="slide-list-item @(selectedSlide ? "selected" : "")">@Html.ActionLink(slide.Title, "Slide", "Course", new { courseId = Model.Course.Id, slideIndex = index }, null)</li>
 					}
 				</ul>
 			</li>
