--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -42,26 +42,22 @@
                             <div class="output-label">Вывод вашей программы:</div>
                             <pre class="no-rounds"><code class="actual-output-content"></code></pre>
                         </div>
-                        <div class="expected-output">
-                            <div class="output-label">Правильный вывод:</div>
-                            <pre class="no-rounds"><code class="expected-output-content">@slide.ExpectedOutput</code></pre>
+                        <div class="diff-table">
+                            
                         </div>
                     </div>
                 }
             </div>
-  
-
-            
             @Html.Partial("_SlideNavigation", Model)
         </div>
     </div>
 </div>
   @section scripts{
       <script src="~/Scripts/navigate.js"></script>
+<script src="~/Jsdifflib/jsdifflib.js"></script>
       <script src="~/Scripts/slide.js"></script>
       <script>
           var runSolutionUrl = "@Html.Raw(Url.Action("RunSolution", new {courseId = Model.Course.Id, slideIndex = Model.SlideIndex}))";
           console.log(runSolutionUrl);
       </script>
-  
   }
