--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -1,63 +1,98 @@
 ﻿@using uLearn
-  @model CoursePageModel
-  
-  @{
-      ViewBag.Title = Model.Course.Title;
-  }
- @Html.Partial("_Sidebar", Model)
+@model CoursePageModel
+
+@{
+	ViewBag.Title = Model.Course.Title;
+}
+@Html.Partial("_Sidebar", Model)
 <div class="slide-container">
-    <div class="container body-content" >
-        <div class="row" >
-            <div class='slide'>
-                @foreach (SlideBlock block in Model.Slide.Blocks)
-                {
-                    if (block.IsCode)
-                    {
-                        <textarea class='code code-sample'>@block.Text</textarea>
-                    }
-                    else
-                    {
-                        @Html.Raw(block.RenderedText)
-                    }
- 				
-                }
-                @{ var slide = Model.Slide as ExerciseSlide; }
-                @if (slide != null)
-                {
-                    <textarea class='code code-exercise'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
-                    <div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine ™</a></div>
+	<div class="container body-content">
+		<div class="row">
+			<div class='slide'>
+				<h1>@Model.Slide.Title</h1>
+				@foreach (SlideBlock block in Model.Slide.Blocks)
+				{
+					if (block.IsCode)
+					{
+						<textarea class='code code-sample'>@block.Text</textarea>
+					}
+					else
+					{
+						@Html.Raw(block.RenderedText)
+					}
 
-				  @*
-  					<a href="#" onclick="updateVerdict(true, 'Успех!', 'some right answer', false)">OK</a>
-  					<a href="#" onclick="updateVerdict(false, 'Compilation error', 'details', true)">CompilationError</a>
-  					<a href="#" onclick="updateVerdict(false, 'Неверный ответ', 'Bullshit', false)">WrongAnswer</a>
-  				*@
+				}
+				@{ var slide = Model.Slide as ExerciseSlide; }
+				@if (slide != null)
+				{
+					<textarea class='code code-exercise'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
+					<div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine ™</a></div>
 
-                    @Html.Partial("_ExerciseHints", slide.HintsHtml)
+					@*
+						<a href="#" onclick="updateVerdict(true, 'Успех!', 'some right answer', false)">OK</a>
+						<a href="#" onclick="updateVerdict(false, 'Compilation error', 'details', true)">CompilationError</a>
+						<a href="#" onclick="updateVerdict(false, 'Неверный ответ', 'Bullshit', false)">WrongAnswer</a>
+					*@
 
-                    <button type="button" id="run" class="run-solution-button btn btn-primary btn-lg no-rounds">RUN</button>
-                    <div class="run-verdict clearfix"></div>
-                    <div class="after-run-block">
-                        <div class="actual-output">
-                            <div class="output-label">Вывод вашей программы:</div>
-                            <pre class="no-rounds"><code class="actual-output-content"></code></pre>
-                        </div>
-                        <div class="diff-table">
-                            
-                        </div>
-                    </div>
-                }
-            </div>
-            @Html.Partial("_SlideNavigation", Model)
-        </div>
-    </div>
+					@Html.Partial("_ExerciseHints", slide.HintsHtml)
+
+					<button type="button" id="run" class="run-solution-button btn btn-primary btn-lg no-rounds">RUN</button>
+					<div class="run-verdict clearfix"></div>
+					<div class="after-run-block">
+						<div class="actual-output">
+							<div class="output-label">Вывод вашей программы:</div>
+							<pre class="no-rounds"><code class="actual-output-content"></code></pre>
+						</div>
+						<div class="diff-table">
+
+						</div>
+					</div>
+				}
+			</div>
+			@Html.Partial("_SlideNavigation", Model)
+		</div>
+	</div>
 </div>
-  @section scripts{
-      <script src="~/Scripts/navigate.js"></script>
-<script src="~/Jsdifflib/jsdifflib.js"></script>
-      <script src="~/Scripts/slide.js"></script>
-      <script>
-          var runSolutionUrl = "@Html.Raw(Url.Action("RunSolution", new {courseId = Model.Course.Id, slideIndex = Model.SlideIndex}))";
-          console.log(runSolutionUrl);
-      </script>
-  }
+@section scripts{
+	<script src="~/Scripts/navigate.js"></script>
+	<script src="~/Jsdifflib/jsdifflib.js"></script>
+	<script src="~/Scripts/slide.js"></script>
+	<script>
+		var runSolutionUrl = "@Html.Raw(Url.Action("RunSolution", new {courseId = Model.Course.Id, slideIndex = Model.SlideIndex}))";
+		console.log(runSolutionUrl);
+	</script>
+	@if (Model.HasNextSlide)
+	{
+		<script>
+			var $endHere = $("#EndHere");
+			$endHere.hide();
+		</script>
+	}
+	else
+	{
+		<script>
+			var $nextLink = $("#NextLink");
+			$nextLink.hide();
+		</script>
+	}
+	@if (Model.HasPrevSlide)
+	{
+		<script>
+			var $selectorHere = $("#SelectorHere");
+			$selectorHere.hide();
+		</script>
+	}
+	else
+	{
+		<script>
+			var $prevLink = $("#PrevLink");
+			$prevLink.hide();
+		</script>
+	}
+	<script>
+		var $showAnotherAnswer = $("#ShowAnotherAnswer");
+		$showAnotherAnswer.hide();
+	</script>
+
+
+}
