--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -25,8 +25,8 @@
 				@{ var slide = Model.Slide as ExerciseSlide; }
 				@if (slide != null)
 				{
-				    <textarea class='code code-exercise'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
-				    <div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine ™</a></div>
+					<textarea class='code code-exercise'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
+					<div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine ™</a></div>
 
 					@*
 						<a href="#" onclick="updateVerdict(true, 'Успех!', 'some right answer', false)">OK</a>
@@ -34,34 +34,51 @@
 						<a href="#" onclick="updateVerdict(false, 'Неверный ответ', 'Bullshit', false)">WrongAnswer</a>
 					*@
 
-				    @Html.Partial("_ExerciseHints", slide.HintsHtml)
-				    @Html.Partial("_AskBar")
-				    ;
-				    <button type="button" data-url="@Url.Action("RunSolution", new {courseId = Model.Course.Id, slideIndex = Model.SlideIndex})" class="run-solution-button btn btn-primary btn-lg no-rounds">
-				        RUN
-				    </button>
-				    <div class="run-verdict clearfix"></div>
-				    <div class="after-run-block">
-				        <div class="actual-output">
-				            <div class="output-label">Вывод вашей программы:</div>
-				            <pre class="no-rounds"><code class="actual-output-content"></code></pre>
-				        </div>
-				        <div class="diff-table">
+					@Html.Partial("_ExerciseHints", slide.HintsHtml)
+					@Html.Partial("_AskBar")
+					;
+					<button type="button" class="run-solution-button btn btn-primary btn-lg no-rounds"
+							data-url="@Url.Action("RunSolution", new {courseId = Model.Course.Id, slideIndex = Model.SlideIndex})">
+						RUN
+					</button>
+					<div class="run-verdict clearfix"></div>
+					<div class="after-run-block">
+						<div class="actual-output">
+							<div class="output-label">Вывод вашей программы:</div>
+							<pre class="no-rounds"><code class="actual-output-content"></code></pre>
+						</div>
+						<div class="diff-table">
 
-				        </div>
-				    </div>
+						</div>
+					</div>
 				}
 				else
 				{
-				    @Html.Partial("_AskBar");
+					@Html.Partial("_AskBar");
 				}
-				</div>
-				@Html.Partial("_SlideNavigation", Model)
 			</div>
+			@Html.Partial("_SlideNavigation", Model)
 		</div>
 	</div>
-	@section scripts{
-		<script src="~/Scripts/navigate.js"></script>
-		<script src="~/Jsdifflib/jsdifflib.js"></script>
-		<script src="~/Scripts/slide.js"></script>
-	}
+</div>
+<div>
+	@if (Request.IsLocal)
+{
+	<div class="modal-footer">
+		<a href="#" onclick="toggleFakeRun()">Переключить в тестовый режим запуска</a>
+		<script>
+			function toggleFakeRun() {
+				var $btn = $(".run-solution-button");
+				$btn
+					.css("background-color", "blue")
+					.data("url", $btn.data("url").replace("/RunSolution", "/FakeRunSolution"));
+			}
+		</script>
+	</div>
+}
+</div>
+@section scripts{
+	<script src="~/Scripts/navigate.js"></script>
+	<script src="~/Jsdifflib/jsdifflib.js"></script>
+	<script src="~/Scripts/slide.js"></script>
+}
