show latest AC solution on slide, upd like, upd like sort, add 'code-clear' button

--- a/src/uLearn.Web/Content/ulearn.css
+++ b/src/uLearn.Web/Content/ulearn.css
@@ -82,7 +82,9 @@ a.nav-arrow:hover {
     min-height: 200px;
 }
 
-
+.clear-code-button {
+    margin: 20px 0 20px 0;
+}
 
 .run-solution-button {
     margin: 20px 0 20px 0;
@@ -183,6 +185,11 @@ a.nav-arrow:hover {
 
 .ask-button {
     margin-top: 10px;
+}
+
+.solution-bar {
+    max-width: 500px;
+    width: 500px;
 }
 
 
