--- a/src/uLearn.Web/Views/Course/Slide.cshtml
+++ b/src/uLearn.Web/Views/Course/Slide.cshtml
@@ -1,4 +1,5 @@
-﻿@using uLearn
+﻿@using Microsoft.Ajax.Utilities
+@using uLearn
 @model CoursePageModel
 
 @{
@@ -25,8 +26,19 @@
 				@{ var slide = Model.Slide as ExerciseSlide; }
 				@if (slide != null)
 				{
-				    <textarea class='code code-exercise'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
+				    if (Model.IsPassedTask)
+				    {
+						<span class="label label-success">Success</span>
+				        <textarea class='code code-exercise'>@Model.LatestAcceptedSolution</textarea>
+					}
+					else
+					{
+				        <textarea class='code code-exercise'>@slide.ExerciseInitialCode.EnsureEnoughLines(4)</textarea>
+				    }
 				    <div class="sphere-engine-tm">Powered by <a target="blank" href="http://sphere-engine.com">Sphere Engine ™</a></div>
+					<button class="clear-code-button btn btn-lg" onclick="$('.code-exercise')[0].codeMirrorEditor.setValue('\n\n\n')">
+						ClearCode
+					</button>
 
 					@*
 						<a href="#" onclick="updateVerdict(true, 'Успех!', 'some right answer', false)">OK</a>
@@ -36,7 +48,6 @@
 
 				    @Html.Partial("_ExerciseHints", slide.HintsHtml)
 				    @Html.Partial("_AskBar")
-				    ;
 				    <button type="button" data-url="@Url.Action("RunSolution", new {courseId = Model.Course.Id, slideIndex = Model.SlideIndex})" class="run-solution-button btn btn-primary btn-lg no-rounds">
 				        RUN
 				    </button>
