Prepare for publishing to azure

--- a/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
+++ b/src/uLearn.Web/Views/Course/AcceptedSolutions.cshtml
@@ -21,6 +21,5 @@
 	</div>
 </div>
 @section scripts{
-	<script src="~/Scripts/navigate.js"></script>
-	<script src="~/Scripts/slide.js"></script>
+	@Scripts.Render("~/slide-js")
 }
