Fix Account pages markup

--- a/src/uLearn.Web/Views/Account/ExternalLoginFailure.cshtml
+++ b/src/uLearn.Web/Views/Account/ExternalLoginFailure.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewBag.Title = "Не удалось войти";
 }
-
-<h2>@ViewBag.Title.</h2>
-<h3 class="text-error">Не удалось войти с помощью стороннего сервиса аутентификации.</h3>
+<div class="container">
+	<h2>@ViewBag.Title.</h2>
+	<h3 class="text-error">Не удалось войти с помощью стороннего сервиса аутентификации.</h3>
+</div>
